Changed  89 files changed, 19313 insertions(+), 2341 deletions(-) | Files: .env,.env.example,README.md,apps/gateway/nest-cli.json,apps/gateway/package.json,apps/gateway/project.json,apps/gateway/src/app.controller.ts,apps/gateway/src/app.module.ts,apps/gateway/src/app.service.ts,apps/gateway/src/auth/auth.controller.ts,apps/gateway/src/health/health.controller.ts,apps/gateway/src/main.ts,apps/gateway/tsconfig.app.json,apps/gateway/tsconfig.json,apps/gateway/webpack.config.js,docker/docker-compose.dev.yml,docker/docker-compose.yml,docs/ARCHITECTURE.md,libs/auth/nestjs-better-auth/package.json,libs/auth/nestjs-better-auth/src/auth-guard.ts,libs/auth/nestjs-better-auth/src/auth-module-definition.ts,libs/auth/nestjs-better-auth/src/auth-module.ts,libs/auth/nestjs-better-auth/src/auth-service.ts,libs/auth/nestjs-better-auth/src/decorators.ts,libs/auth/nestjs-better-auth/src/index.ts,libs/auth/nestjs-better-auth/src/middlewares.ts,libs/auth/nestjs-better-auth/src/symbols.ts,libs/auth/nestjs-better-auth/src/utils.ts,libs/auth/nestjs-better-auth/tsconfig.json,libs/database/drizzle.config.ts,libs/database/package.json,libs/database/src/index.ts,libs/database/src/schema/index.ts,libs/database/tsconfig.json,libs/shared/types/package.json,libs/shared/types/src/auth.ts,libs/shared/types/src/index.ts,libs/shared/types/src/tenant.ts,libs/shared/types/src/user.ts,libs/shared/types/tsconfig.json,libs/shared/utils/package.json,libs/shared/utils/src/crypto.ts,libs/shared/utils/src/date.ts,libs/shared/utils/src/index.ts,libs/shared/utils/src/string.ts,libs/shared/utils/tsconfig.json,package.json,packages/.gitkeep,packages/async/README.md,packages/async/eslint.config.mjs,packages/async/package.json,packages/async/src/index.ts,packages/async/src/lib/async-retry.spec.ts,packages/async/src/lib/async-retry.ts,packages/async/tsconfig.json,packages/async/tsconfig.lib.json,packages/async/tsconfig.spec.json,packages/async/vite.config.ts,packages/colors/README.md,packages/colors/eslint.config.mj

--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "@org/source",
-  "version": "0.0.0",
+  "name": "@oksai/source",
+  "version": "0.0.1",
   "license": "MIT",
-  "scripts": {},
   "private": true,
+  "scripts": {
+    "dev": "nx serve gateway",
+    "build": "nx run-many -t build",
+    "test": "nx run-many -t test",
+    "lint": "nx run-many -t lint",
+    "db:generate": "nx run @oksai/database:db:generate",
+    "db:migrate": "nx run @oksai/database:db:migrate",
+    "db:push": "nx run @oksai/database:db:push",
+    "db:studio": "nx run @oksai/database:db:studio",
+    "docker:up": "docker-compose -f docker/docker-compose.yml up -d",
+    "docker:down": "docker-compose -f docker/docker-compose.yml down",
+    "docker:dev": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.dev.yml up"
+  },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/eslint": "22.5.1",
     "@nx/eslint-plugin": "22.5.1",
     "@nx/js": "22.5.1",
+    "@nx/node": "^22.5.3",
     "@nx/vite": "22.5.1",
     "@nx/vitest": "22.5.1",
     "@nx/web": "22.5.1",
+    "@nx/webpack": "^22.5.3",
     "@swc-node/register": "1.11.1",
     "@swc/core": "1.15.8",
     "@swc/helpers": "0.5.18",
     "@types/node": "20.19.9",
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
+    "drizzle-kit": "^0.24.0",
     "eslint": "~8.57.0",
     "jiti": "2.4.2",
     "jsonc-eslint-parser": "^2.1.0",
@@ -30,9 +45,6 @@
     "vite": "^7.0.0",
     "vitest": "4.0.9"
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "nx": {
     "includedScripts": [],
     "targets": {
@@ -45,6 +57,5 @@
         }
       }
     }
-  },
-  "dependencies": {}
+  }
 }
