feat: integrate Better Auth with NestJS gateway and fix build issues
- Add Dockerfile for gateway with multi-stage build
- Fix docker-compose.dev.yml (remove obsolete version, add volumes)
- Fix @oksai/nestjs-better-auth library:
  - Remove .ts extensions from imports
  - Add CJS/ESM dual format output
  - Fix createAuthMiddleware import from better-auth/api
  - Add Reflector provider for AuthGuard
  - Handle optional dependencies with @Optional()
- Fix gateway TypeScript config (noEmit, emitDeclarationOnly)
- Update project.json to use nest CLI for build/serve
- Add comprehensive Better Auth documentation
- Add verification scripts and OAuth setup guides

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -9,24 +9,29 @@ DB_USER=oksai
 DB_PASSWORD=oksai_dev_password
 DB_NAME=oksai
 
-# Redis
+# Redis (可选，用于会话缓存)
 REDIS_URL=redis://localhost:6379
 
-# JWT
-JWT_SECRET=oksai_jwt_secret_key_dev
-JWT_EXPIRES_IN=7d
+# Better Auth
+# 生成强密钥：openssl rand -base64 32
+# ⚠️ 重要：Better Auth 会自动读取这些环境变量
+# 不要在配置中显式设置 secret 和 baseURL
+BETTER_AUTH_SECRET=oksai_better_auth_secret_key_for_development_minimum_32_characters
+BETTER_AUTH_URL=http://localhost:3000
 
-# OAuth - GitHub
+# CORS（前端地址）
+CORS_ORIGIN=http://localhost:5173
+
+# OAuth - GitHub (可选)
+# 设置指南：docs/GITHUB_OAUTH_SETUP.md
+# 创建应用：https://github.com/settings/developers
+# 回调 URL：http://localhost:3000/api/auth/callback/github
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-# OAuth - Google
+# OAuth - Google (可选)
+# 设置指南：docs/GOOGLE_OAUTH_SETUP.md
+# 创建应用：https://console.cloud.google.com/apis/credentials
+# 回调 URL：http://localhost:3000/api/auth/callback/google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-# Better Auth
-BETTER_AUTH_SECRET=your_better_auth_secret_here
-BETTER_AUTH_URL=http://localhost:3000
-
-# CORS
-CORS_ORIGIN=http://localhost:5173
