--- a/apps/gateway/tsconfig.app.json
+++ b/apps/gateway/tsconfig.app.json
@@ -1,14 +1,18 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "sourceMap": true,
+    "noEmit": false
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "test"],
   "include": ["src/**/*.ts"]
 }
