--- a/libs/auth/nestjs-better-auth/package.json
+++ b/libs/auth/nestjs-better-auth/package.json
@@ -3,7 +3,16 @@
   "version": "1.0.0",
   "description": "Better Auth integration for NestJS - Oksai",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.js"
+    }
+  },
   "private": true,
   "license": "MIT",
   "keywords": [
@@ -13,18 +22,18 @@
     "authentication"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts",
-    "build:watch": "tsup src/index.ts --format esm --dts --watch",
+    "build": "tsup src/index.ts --format cjs,esm --dts --external @nestjs/graphql --external @nestjs/websockets",
+    "build:watch": "tsup src/index.ts --format cjs,esm --dts --watch",
     "check": "biome check .",
     "check:fix": "biome check --write .",
     "clean": "rimraf dist"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0",
-    "better-auth": ">=1.3.8 <2.0.0",
-    "express": "^4.0.0 || ^5.0.0",
-    "reflect-metadata": "^0.2.0"
+    "@nestjs/common": "^11.1.14",
+    "@nestjs/core": "^11.1.14",
+    "better-auth": ">=1.5.0",
+    "express": "^5.2.1",
+    "reflect-metadata": "^0.2.2"
   },
   "peerDependenciesMeta": {
     "@nestjs/graphql": {
@@ -38,9 +47,9 @@
     }
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "rimraf": "^6.0.0",
-    "tsup": "^8.0.0",
-    "typescript": "~5.9.2"
+    "@types/express": "^5.0.6",
+    "rimraf": "^6.1.3",
+    "tsup": "^8.5.1",
+    "typescript": "~5.9.3"
   }
 }
