--- a/nx.json
+++ b/nx.json
@@ -1,10 +1,7 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "namedInputs": {
-    "default": [
-      "{projectRoot}/**/*",
-      "sharedGlobals"
-    ],
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
       "default",
       "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
@@ -55,20 +52,17 @@
     }
   ],
   "release": {
-    "projects": [
-      "!utils",
-      "!@org/source"
-    ],
+    "projects": ["!utils", "!@org/source"],
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     }
   },
   "targetDefaults": {
     "test": {
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     }
   },
-  "nxCloudId": "69a26389414645c273cb75ea"
+  "nxCloudId": "69a26389414645c273cb75ea",
+  "useDaemonProcess": false,
+  "neverConnectToCloud": true
 }
