--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,8 +6,8 @@
     "importHelpers": true,
     "isolatedModules": true,
     "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
@@ -16,6 +16,14 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["@org/source"]
+    "baseUrl": ".",
+    "paths": {
+      "@oksai/nestjs-better-auth": [
+        "libs/auth/nestjs-better-auth/src/index.ts"
+      ],
+      "@oksai/database": ["libs/database/src/index.ts"],
+      "@oksai/types": ["libs/shared/types/src/index.ts"],
+      "@oksai/utils": ["libs/shared/utils/src/index.ts"]
+    }
   }
 }
