--- a/libs/auth/nestjs-better-auth/package.json
+++ b/libs/auth/nestjs-better-auth/package.json
@@ -26,7 +26,10 @@
     "build:watch": "tsup src/index.ts --format cjs,esm --dts --watch",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "peerDependencies": {
     "@nestjs/common": "^11.1.14",
@@ -47,8 +50,13 @@
     }
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.14",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "reflect-metadata": "^0.2.2",
     "rimraf": "^6.1.3",
+    "ts-jest": "^29.4.6",
     "tsup": "^8.5.1",
     "typescript": "~5.9.3"
   }
