--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "dev:web": "nx dev @oksai/web-admin",
     "build": "nx run-many -t build",
     "test": "nx run-many -t test",
-    "lint": "nx run-many -t lint",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "lint:staged": "lint-staged",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "db:generate": "nx run @oksai/database:db:generate",
     "db:migrate": "nx run @oksai/database:db:migrate",
     "db:push": "nx run @oksai/database:db:push",
@@ -19,12 +25,11 @@
     "check:auth": "node scripts/check-better-auth-config.js",
     "verify:gateway": "node scripts/verify-gateway-startup.js",
     "test:auth": "tsx apps/gateway/test-auth.ts",
-    "test:oauth": "tsx apps/gateway/test-oauth.ts"
+    "test:oauth": "tsx apps/gateway/test-oauth.ts",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@nx/eslint": "22.5.1",
-    "@nx/eslint-plugin": "22.5.1",
+    "@biomejs/biome": "^2.4.4",
     "@nx/js": "22.5.1",
     "@nx/node": "^22.5.3",
     "@nx/vite": "22.5.1",
@@ -38,14 +43,12 @@
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
     "drizzle-kit": "^0.24.0",
-    "eslint": "~8.57.0",
+    "husky": "^9.1.7",
     "jiti": "2.4.2",
-    "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^16.3.1",
     "nx": "22.5.1",
-    "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0",
     "verdaccio": "^6.0.5",
     "vite": "^7.0.0",
     "vitest": "4.0.9"
